@@ -54,7 +54,6 @@
 <div class="seite">
 
  <!--beginn kopfzeile -->
- 
 <div class="kopfzeile">
 <!--logo kopfzeile links-->
 <div class="kopflogo"><!--based on<br>-->
@@ -69,11 +68,10 @@
 
 <div class="logotext">Seminarix ist eine auf sidux aufbauende Live CD, die f&#252;r die Lehrerausbildung entwickelt wurde</div>
 </div> <!--ende kopfmitte-->
-
 </div> <!--ende kopfzeile-->
- 
- <!--hauptnavigation linke seite-->
- 
+
+<!--hauptnavigation linke seite-->
+
 <div class="hauptnavigation">
 <ul><li><IMG src="pictures/Kategorien/Allgemein.png" alt="logo-allgemein" width="60" height="60"></li></ul>
 <a href="willkommen.html" type="text/html" target="_top">Willkommen</a>
@@ -120,7 +118,7 @@
 
 <div class="text">
 
-<h1>Allgemein</h1>
+<h1>Abteilung Allgemein</h1>
 
 
 <p><span class="bold">Vorbemerkung</span></p>
@@ -136,7 +134,6 @@ auch noch danach) hilfreich sein k&ouml;nnen.</p>
 <p>Hier sind neben dem sehr schnellen KOffice-Paket auch Programme zum
 Abspielen von Video und Multimediadateien ebenso wie Grafikbearbeitungsprogramme
 oder das DeskTopPublishing Programm Scribus enthalten.</p>
- 
 
 <p>Auch ein Programm zur Visualisierung von Gedanken und Prozessen
 (vym) ist integriert. Es gibt noch viele mehr. </p>
@@ -148,7 +145,6 @@ eigentlich ausreichen.Die wichtigsten stellen wir hier vor.</p>
 
 <p>Suchen Sie Hilfen und Informationen zu irgendeinem der KOfficepakete,
 klicken Sie auf den Men&uuml;punkt "Hilfe" im jeweiligen Programm.</p>
- 
 
 <p>Ein Blick
 auf <a href="http://docs.kde.org/development/de/koffice/" target="_blank">http://docs.kde.org/development/de/koffice/</a>
@@ -160,7 +156,7 @@ aus Platzgr&uuml;nden keinen Platz auf dieser CD gefunden haben.</p>
 <p>In allen F&auml;llen, in denen wir im Internet zus&auml;tzliche Hilfen gefunden haben, haben wir sie
 (mitunter in Englisch) unter <span id="italicred">Info</span>
 unterhalb der Programm Beschreibung verlinkt.</p>
- 
+
 
 <p>Mitunter sind es Zeitschriftenartikel, mitunter Wiki-Eintr&auml;ge. Da wir nicht die
 Herren dieser Eintr&auml;ge sind, gibt es auch keine
@@ -168,7 +164,6 @@ Gew&auml;hr, dass diese Links dann funktionieren, wenn Sie sich Hilfe davon
 versprechen.</p>
 
 <p> Zum Zeitpunkt der Erstellung haben sie alle Informationen geliefert.</p>
- 
 
 <p>Zur rechtlichen Seite gilt das im Impressum Geschriebene.</p>
 
@@ -201,7 +196,7 @@ Unterrichtsalltag mehr als ausreichend.</dd>
   <dd>KOffice ist eine&nbsp;funktionsreiche B&uuml;rol&ouml;sung, die&nbsp;in den KDE Desktop integriert ist.</dd>
 
   <dd>Sie unterst&uuml;tzt das OASIS OpenDocument-Dateiformat, welches ein offener Standard für Office-Anwendungen ist. Auch das aktuelle OpenOffice nutzt dieses Dateiformat standardmäßig.</dd>
- 
+
   <dd>Weiter werden eine grosse Auswahl an Filtern geboten, um mit
 anderen popul&auml;ren (und propriet&auml;ren)
 B&uuml;roprogrammen wie z.B. Microsoft Office Produkte austauschen zu k&ouml;nnen. (Hinweis: Das Abspeichern und &Ouml;ffnen von propriet&auml;ren Microsoft Office Dateienformaten verl&auml;uft mit KOffice nicht immer ganz fehlerfrei. Die Dateien lassen sich jedoch meist mit wenigen Handgriffen nachkorrigieren.) </dd>
@@ -230,7 +225,7 @@ ebenfalls zur Verf&uuml;gung) </dd>
   <dd>Rahmenorientiertes
 und professionell einsetzbares DeskTopPublishing-Programm, mit dessen Hilfe
 auch Spezialaufgaben im Bereich von Seitengestaltung gel&ouml;st werden k&ouml;nnen.</dd>
- 
+
   <dd>Das ist dann besonders interessant, wenn Gestaltgesetze
 aus der Wahrnehmungspsychologie bei der Erarbeitung von
 Arbeitsbl&auml;ttern ernst genommen werden.</dd>
@@ -266,9 +261,7 @@ homepage=http://quanta.kdewebdev.org/</dd>
 
   <dd class="bold">Gimp</dd>
 
-  <dd>Au&szlig;erordentlich m&auml;chtiges Programm zu Bearbeitung
-und Manipulation von Grafikdateien, vergleichbar mit teuren
-und propriet&auml;ren Profiprodukten.</dd>
+  <dd>Mit Gimp steht ein au&#223;erordentlich m&#228;chtiges Programm zu Bearbeitung und Manipulation von Grafikdateien zur Verf&#252;gung, da mit mehreren Ebenen, zahlreichen Filtern und vielen M&#246;glichkeiten der Berabeitung von Bilddateien aufwartet und es dabei mit teuren und propriet&#228;ren Profiprodukten aufnehmen kann.</dd>
 
   <dd class="italicgrey">Steht auch unter anderen Betriebssystemen zur Verf&uuml;gung.</dd>
 
@@ -308,9 +301,8 @@ Flyer-Layouts, CD-Covern, Postern, Schriftz&uuml;gen oder Comics.</dd>
 
   <dd class="bold">KImageMapEditor</dd>
 
-  <dd>Mit KImageMapEditor lassen sich Bilder so bearbeiten, dass festgelegte 
-Teile des Bildes z.B. einen Link enthalten k&ouml;nnen.</dd>
- 
+  <dd>Mit KImageMapEditor lassen sich Bilder so bearbeiten, dass festgelegte Teile des Bildes z.B. einen Link enthalten k&#246;nnen. Das kann bei Webprojekten gut eingesetzt werden, indem eine Mausbewegung über einem festgelegten Bildteil einen Link anbietet bzw. ausl&#246;st.</dd>
+
   <dd>Hilfreich bei Webprojekten.</dd>
 
 </dl>
@@ -532,7 +524,7 @@ der Rechner die Informationen aus dem Scanner interpretieren kann.</dd>
 
   <dd class="bold">Kooka</dd>
 
-  <dd>Kooka ist eine in KDE integrierte Anwendung zum Scannen.</dd>
+  <dd>Kooka ist eine in den KDE integrierte grafische Oberfl&#228;che, die den Vorgang des Scannens erleichtern helfen soll.</dd>
 
 </dl>
 
@@ -577,7 +569,7 @@ oder bei technischen Fragen eine <span class="bold">Email</span> an <a href="mai
  <!--ende textbox mitte -->
 
 <!--<div class="bgimg"><img src="pictures/gaia.png" alt="bild sidux gaia" height="145" width="200"></div>-->
--
+
 </div>
  <!--ende seite-->
 
