@@ -191,7 +191,7 @@ Den Programmstarter finden sie im "Kde-Men&#252;" im Untermen&#252; "sidux", ode
 
   <dd class="bold">KTurtle</dd>
 
-  <dd>Für Programmieranfänger Programmieren mit LOGO, mit leicht bedienbarer Entwickleroberfläche. Projekt aus dem KDE-EDU Bereich.</dd>
+  <dd>Logo ist eine kleine und schnelle erlernbare Programmiersprache. Kturtle basiert auf Logo und stammt ebenfalls aus dem  KDE-Edu-Bereich.</dd>
 
 </dl>
 
@@ -209,7 +209,7 @@ Den Programmstarter finden sie im "Kde-Men&#252;" im Untermen&#252; "sidux", ode
 
   <dd class="bold">Kivio</dd>
 
-  <dd>Kivio ist ein im Visio®-stil gehaltenes Programm zur Erstellung von Flussdiagrammen und Bearbeitung von Statistiken. Bestandteil von KOffice.</dd>
+  <dd>Kivio ist ein im Visio&#174;-stil gehaltenes Programm zur Erstellung von Flussdiagrammen und Bearbeitung von Statistiken. Bestandteil von KOffice.</dd>
 
 </dl>
 
@@ -226,7 +226,7 @@ Den Programmstarter finden sie im "Kde-Men&#252;" im Untermen&#252; "sidux", ode
 
   <dd class="bold">Quanta Plus</dd>
 
-  <dd>Quanta Plus ist eine Entwicklungsumgebung zum Erstellen von Webseiten. Es bietet eine Projektverwaltung und unterstützt beliebige Auszeichnungssprachen, der Schwerpunkt liegt aber auf webbasierten Sprachen und Techniken wie HTML, XHTML, CSS, JavaScript, Java, oder PHP.<br>Quanta Plus unterstützt eine Vielzahl externer Komponenten und Werkzeuge, welche die Entwicklung unterstützen.<br>Damit stellt Quanta eine umfangreiche und dennoch einfach zu bedienende Umgebung dar, um schnell und effizient eigene Webseiten zu erstellen und zu verwalten.
+  <dd>Quanta Plus ist eine Entwicklungsumgebung zum Erstellen von Webseiten. Es bietet eine Projektverwaltung und unterst&#252;tzt beliebige Auszeichnungssprachen, der Schwerpunkt liegt aber auf webbasierten Sprachen und Techniken wie HTML, XHTML, CSS, JavaScript, Java, oder PHP.<br>Quanta Plus unterst&#252;tzt eine Vielzahl externer Komponenten und Werkzeuge, welche die Entwicklung unterst&#252;tzen.<br>Damit stellt Quanta eine umfangreiche und dennoch einfach zu bedienende Umgebung dar, um schnell und effizient eigene Webseiten zu erstellen und zu verwalten.
 homepage=http://quanta.kdewebdev.org/</dd>
 
 </dl>
