@@ -195,9 +195,7 @@ einbinden.</dd>
 
   <dd class="bold">Gimp</dd>
 
-  <dd>Au&szlig;erordentlich m&auml;chtiges Programm zu Bearbeitung
-und Manipulation von Grafikdateien, vergleichbar mit teuren
-und propriet&auml;ren Profiprodukten.</dd>
+  <dd>Mit Gimp steht ein au&#223;erordentlich m&#228;chtiges Programm zu Bearbeitung und Manipulation von Grafikdateien zur Verf&#252;gung, da mit mehreren Ebenen, zahlreichen Filtern und vielen M&#246;glichkeiten der Berabeitung von Bilddateien aufwartet und es dabei mit teuren und propriet&#228;ren Profiprodukten aufnehmen kann.</dd>
 
   <dd class="italicgrey">Steht auch unter anderen Betriebssystemen zur Verf&uuml;gung.</dd>
 
@@ -253,8 +251,7 @@ importiert werden.</dd>
 
   <dd class="bold">Karbon</dd>
 
-  <dd>Mit der zum KOffice-Projekt geh&ouml;renden Anwendung lassen sich skalierbare Grafiken
-herstellen und &auml;ndern.</dd>
+  <dd>Karbon geh&#246;rt zum KOffice-Projekt. Mit Karbon lassen sich skalierbare Grafiken herstellen und auch &#228;ndern. Skalierbare Grafiken haben den großen Vorteil, dass sie bei Vergr&#246;&#223;erungen nicht den von Bitmaps bekannten Treppeneffekt zeigen, sondern auch in großen Dimensionen noch gut aussehen. Karbon arbeitet mit Vektorgrafiken.</dd>
 
 </dl>
 
@@ -271,9 +268,7 @@ herstellen und &auml;ndern.</dd>
 
   <dd class="bold">Kino</dd>
 
-  <dd>Mit Kino lassen sich Dateien von einer Videokamera &uuml;ber
-einen Firewire-Anschluss auf den Rechner laden, bearbeiten und
-schneiden.</dd>
+  <dd>Kino ist ein Open-Source Video Editor, der es erlaubt, ein von einer Videokamera über einen Firewire-Anschluß eingespieltes Video zu bearbeiten, zu schneiden, zu k&#252;rzen, Clips einzuf&#252;gen und vieles mehr.</dd>
 
 </dl>
 
@@ -289,7 +284,7 @@ schneiden.</dd>
 
   <dd class="bold">Kolourpaint</dd>
 
-  <dd>Einfaches Mal- und Zeichenprogramm f&uuml;r den KDE.</dd>
+  <dd>Wenn es um einfach Korrekturen an Bildern geht, ist ein umfangreiches Programm oftmals zu gro&#223;. Hier ist die St&#228;rke von Kolourpaint. Skalieren, Dehen, Spiegeln, Kippen, Invertieren, das ist alles m&#246;glich. Auch Text in Bilder einf&#252;gen kann damit erledigt werden</dd>
 
 </dl>
 
@@ -306,8 +301,7 @@ schneiden.</dd>
 
   <dd class="bold">Krita</dd>
 
-  <dd>Bildbearbeitungsprogramm
-aus dem KOffice-Projekt mit Zeichen-, aber auch Spassfunktionen.</dd>
+  <dd>Mit Krita (ebenfalls aus dem KOffice-Projekt) k&#246;nnen sowohl Fotos bearbeitet werden, es l&#228;sst sich aber auch als Malprogramm mit vielf&#228;ltigen Funktionen und Ebenen nutzen. Die Einbindung in das KOffice-Projekt erleichtert die Nutzunhg, weil Officeweit gleiche Icons für gleiche T&#228;tigkeiten verwendet werden.</dd>
 
 </dl>
 
