@@ -1,8 +1,12 @@
 seminarix-handbook (0.1.6) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 08 Dec 2007 03:12:41 +0100
+  [ Ferdinand Thommes ]
+  * updated allgemein.html informatik.html kunst.html
+
+ -- Ferdinand Thommes <devil@sidux.com>  Sun, 09 Dec 2007 15:39:03 +0100
 
 seminarix-handbook (0.1.5) unstable; urgency=low
 
